ran inception resnet v2

--- a/Ch07/7.2.Transfer_Learning.ipynb
+++ b/Ch07/7.2.Transfer_Learning.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,8 @@
     "    image_gen_aug = ImageDataGenerator(\n",
     "        samplewise_center=False, rotation_range=30, width_shift_range=0.2,\n",
     "        height_shift_range=0.2, brightness_range=(0.5,1.5), shear_range=5, \n",
-    "        zoom_range=0.2, horizontal_flip=True, fill_mode='reflect', validation_split=0.1\n",
+    "        zoom_range=0.2, horizontal_flip=True, fill_mode='constant', cval=127.5, \n",
+    "        validation_split=0.1\n",
     "    )\n",
     "    image_gen = ImageDataGenerator(samplewise_center=False)\n",
     "    \n",
@@ -284,7 +285,7 @@
     "        yield x,y\n",
     "        \n",
     "        \n",
-    "batch_size = 32\n",
+    "batch_size = 48\n",
     "target_size = (224,224)\n",
     "# Getting the train,valid, test data generators\n",
     "train_gen, valid_gen, test_gen = get_train_valid_test_data_generators(batch_size, target_size)\n",
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -422,67 +423,89 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "2813/2813 [==============================] - 1450s 516ms/step - loss: 2.0707 - accuracy: 0.5410 - val_loss: 1.5575 - val_accuracy: 0.6323 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1351s 721ms/step - loss: 2.0074 - accuracy: 0.5599 - val_loss: 1.4351 - val_accuracy: 0.6608 - lr: 1.0000e-04\n",
       "Epoch 2/50\n",
-      "2813/2813 [==============================] - 1432s 509ms/step - loss: 1.3711 - accuracy: 0.6696 - val_loss: 1.9031 - val_accuracy: 0.6474 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1341s 715ms/step - loss: 1.2502 - accuracy: 0.6953 - val_loss: 1.3436 - val_accuracy: 0.6747 - lr: 1.0000e-04\n",
       "Epoch 3/50\n",
-      "2813/2813 [==============================] - 1433s 509ms/step - loss: 1.1880 - accuracy: 0.7058 - val_loss: 1.5813 - val_accuracy: 0.6530 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1342s 715ms/step - loss: 1.0627 - accuracy: 0.7348 - val_loss: 1.2353 - val_accuracy: 0.6993 - lr: 1.0000e-04\n",
       "Epoch 4/50\n",
-      "2813/2813 [==============================] - 1426s 507ms/step - loss: 1.0466 - accuracy: 0.7351 - val_loss: 1.3044 - val_accuracy: 0.6820 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1339s 714ms/step - loss: 0.9193 - accuracy: 0.7658 - val_loss: 1.2635 - val_accuracy: 0.6894 - lr: 1.0000e-04\n",
       "Epoch 5/50\n",
-      "2813/2813 [==============================] - 1431s 509ms/step - loss: 0.9360 - accuracy: 0.7594 - val_loss: 1.3305 - val_accuracy: 0.6843 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1339s 714ms/step - loss: 0.8224 - accuracy: 0.7864 - val_loss: 1.2464 - val_accuracy: 0.7026 - lr: 1.0000e-04\n",
       "Epoch 6/50\n",
-      "2813/2813 [==============================] - 1433s 509ms/step - loss: 0.8561 - accuracy: 0.7766 - val_loss: 1.2912 - val_accuracy: 0.6874 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1345s 717ms/step - loss: 0.7410 - accuracy: 0.8051 - val_loss: 1.1952 - val_accuracy: 0.7125 - lr: 1.0000e-04\n",
       "Epoch 7/50\n",
-      "2813/2813 [==============================] - 1432s 509ms/step - loss: 0.7787 - accuracy: 0.7952 - val_loss: 1.4107 - val_accuracy: 0.6796 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1355s 723ms/step - loss: 0.6547 - accuracy: 0.8254 - val_loss: 1.3559 - val_accuracy: 0.6871 - lr: 1.0000e-04\n",
       "Epoch 8/50\n",
-      "2813/2813 [==============================] - 1425s 507ms/step - loss: 0.7120 - accuracy: 0.8104 - val_loss: 1.3911 - val_accuracy: 0.6764 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1342s 716ms/step - loss: 0.5997 - accuracy: 0.8381 - val_loss: 1.2998 - val_accuracy: 0.6933 - lr: 1.0000e-04\n",
       "Epoch 9/50\n",
-      "2813/2813 [==============================] - 1432s 509ms/step - loss: 0.6605 - accuracy: 0.8234 - val_loss: 1.3445 - val_accuracy: 0.6866 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1339s 714ms/step - loss: 0.5526 - accuracy: 0.8512 - val_loss: 1.3158 - val_accuracy: 0.6961 - lr: 1.0000e-04\n",
       "Epoch 10/50\n",
-      "2813/2813 [==============================] - 1433s 510ms/step - loss: 0.6104 - accuracy: 0.8337 - val_loss: 1.3823 - val_accuracy: 0.6865 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1342s 716ms/step - loss: 0.5046 - accuracy: 0.8631 - val_loss: 1.3542 - val_accuracy: 0.6941 - lr: 1.0000e-04\n",
       "Epoch 11/50\n",
-      "2813/2813 [==============================] - ETA: 0s - loss: 0.5696 - accuracy: 0.8445\n",
+      "1875/1875 [==============================] - ETA: 0s - loss: 0.4655 - accuracy: 0.8717\n",
       "Epoch 00011: ReduceLROnPlateau reducing learning rate to 9.999999747378752e-06.\n",
-      "2813/2813 [==============================] - 1433s 509ms/step - loss: 0.5696 - accuracy: 0.8445 - val_loss: 1.4215 - val_accuracy: 0.6813 - lr: 1.0000e-04\n",
+      "1875/1875 [==============================] - 1341s 715ms/step - loss: 0.4655 - accuracy: 0.8717 - val_loss: 1.3637 - val_accuracy: 0.6954 - lr: 1.0000e-04\n",
       "Epoch 12/50\n",
-      "2813/2813 [==============================] - 1432s 509ms/step - loss: 0.3488 - accuracy: 0.9030 - val_loss: 1.2142 - val_accuracy: 0.7268 - lr: 1.0000e-05\n",
+      "1875/1875 [==============================] - 1340s 715ms/step - loss: 0.2839 - accuracy: 0.9205 - val_loss: 1.2282 - val_accuracy: 0.7306 - lr: 1.0000e-05\n",
       "Epoch 13/50\n",
-      "2813/2813 [==============================] - 1432s 509ms/step - loss: 0.2774 - accuracy: 0.9234 - val_loss: 1.2087 - val_accuracy: 0.7348 - lr: 1.0000e-05\n",
+      "1875/1875 [==============================] - 1341s 715ms/step - loss: 0.2172 - accuracy: 0.9392 - val_loss: 1.1952 - val_accuracy: 0.7410 - lr: 1.0000e-05\n",
       "Epoch 14/50\n",
-      "2813/2813 [==============================] - 1433s 509ms/step - loss: 0.2434 - accuracy: 0.9328 - val_loss: 1.2375 - val_accuracy: 0.7330 - lr: 1.0000e-05\n",
+      "1875/1875 [==============================] - 1340s 714ms/step - loss: 0.1900 - accuracy: 0.9473 - val_loss: 1.2060 - val_accuracy: 0.7416 - lr: 1.0000e-05\n",
       "Epoch 15/50\n",
-      "2813/2813 [==============================] - 1434s 510ms/step - loss: 0.2209 - accuracy: 0.9389 - val_loss: 1.2286 - val_accuracy: 0.7383 - lr: 1.0000e-05\n",
+      "1875/1875 [==============================] - 1339s 714ms/step - loss: 0.1720 - accuracy: 0.9517 - val_loss: 1.2260 - val_accuracy: 0.7438 - lr: 1.0000e-05\n",
       "Epoch 16/50\n",
-      "2813/2813 [==============================] - 1433s 510ms/step - loss: 0.2027 - accuracy: 0.9432 - val_loss: 1.2443 - val_accuracy: 0.7376 - lr: 1.0000e-05\n",
+      "1875/1875 [==============================] - ETA: 0s - loss: 0.1561 - accuracy: 0.9567\n",
+      "Epoch 00016: ReduceLROnPlateau reducing learning rate to 9.999999747378752e-07.\n",
+      "1875/1875 [==============================] - 1342s 716ms/step - loss: 0.1561 - accuracy: 0.9567 - val_loss: 1.2357 - val_accuracy: 0.7448 - lr: 1.0000e-05\n",
       "Epoch 17/50\n",
-      "2813/2813 [==============================] - 1432s 509ms/step - loss: 0.1901 - accuracy: 0.9462 - val_loss: 1.2284 - val_accuracy: 0.7450 - lr: 1.0000e-05\n",
+      "1875/1875 [==============================] - 1340s 714ms/step - loss: 0.1418 - accuracy: 0.9603 - val_loss: 1.2184 - val_accuracy: 0.7500 - lr: 1.0000e-06\n",
       "Epoch 18/50\n",
-      "2813/2813 [==============================] - ETA: 0s - loss: 0.1786 - accuracy: 0.9510\n",
-      "Epoch 00018: ReduceLROnPlateau reducing learning rate to 9.999999747378752e-07.\n",
-      "2813/2813 [==============================] - 1433s 509ms/step - loss: 0.1786 - accuracy: 0.9510 - val_loss: 1.2396 - val_accuracy: 0.7385 - lr: 1.0000e-05\n",
+      "1875/1875 [==============================] - 1341s 715ms/step - loss: 0.1361 - accuracy: 0.9615 - val_loss: 1.2214 - val_accuracy: 0.7471 - lr: 1.0000e-06\n",
       "Epoch 19/50\n",
-      "2813/2813 [==============================] - 1431s 509ms/step - loss: 0.1600 - accuracy: 0.9551 - val_loss: 1.2408 - val_accuracy: 0.7405 - lr: 1.0000e-06\n",
+      "1875/1875 [==============================] - 1339s 714ms/step - loss: 0.1324 - accuracy: 0.9627 - val_loss: 1.2179 - val_accuracy: 0.7480 - lr: 1.0000e-06\n",
       "Epoch 20/50\n",
-      "2813/2813 [==============================] - 1431s 509ms/step - loss: 0.1557 - accuracy: 0.9562 - val_loss: 1.2358 - val_accuracy: 0.7437 - lr: 1.0000e-06\n",
+      "1875/1875 [==============================] - 1339s 714ms/step - loss: 0.1355 - accuracy: 0.9621 - val_loss: 1.2160 - val_accuracy: 0.7530 - lr: 1.0000e-06\n",
       "Epoch 21/50\n",
-      "2813/2813 [==============================] - 1433s 509ms/step - loss: 0.1538 - accuracy: 0.9565 - val_loss: 1.2318 - val_accuracy: 0.7436 - lr: 1.0000e-06\n",
+      "1875/1875 [==============================] - ETA: 0s - loss: 0.1262 - accuracy: 0.9646\n",
+      "Epoch 00021: ReduceLROnPlateau reducing learning rate to 9.999999974752428e-08.\n",
+      "1875/1875 [==============================] - 1342s 716ms/step - loss: 0.1262 - accuracy: 0.9646 - val_loss: 1.2338 - val_accuracy: 0.7460 - lr: 1.0000e-06\n",
       "Epoch 22/50\n",
-      "2813/2813 [==============================] - 1433s 509ms/step - loss: 0.1524 - accuracy: 0.9575 - val_loss: 1.2422 - val_accuracy: 0.7410 - lr: 1.0000e-06\n",
+      "1875/1875 [==============================] - 1342s 716ms/step - loss: 0.1264 - accuracy: 0.9645 - val_loss: 1.2286 - val_accuracy: 0.7484 - lr: 1.0000e-07\n",
       "Epoch 23/50\n",
-      "2813/2813 [==============================] - ETA: 0s - loss: 0.1517 - accuracy: 0.9572\n",
-      "Epoch 00023: ReduceLROnPlateau reducing learning rate to 9.999999974752428e-08.\n",
-      "2813/2813 [==============================] - 1432s 509ms/step - loss: 0.1517 - accuracy: 0.9572 - val_loss: 1.2440 - val_accuracy: 0.7436 - lr: 1.0000e-06\n"
+      "1875/1875 [==============================] - 1341s 715ms/step - loss: 0.1254 - accuracy: 0.9647 - val_loss: 1.2200 - val_accuracy: 0.7452 - lr: 1.0000e-07\n",
+      "Epoch 24/50\n",
+      "1875/1875 [==============================] - 1340s 715ms/step - loss: 0.1265 - accuracy: 0.9645 - val_loss: 1.2517 - val_accuracy: 0.7455 - lr: 1.0000e-07\n",
+      "Epoch 25/50\n",
+      "1875/1875 [==============================] - 1341s 715ms/step - loss: 0.1254 - accuracy: 0.9653 - val_loss: 1.2171 - val_accuracy: 0.7502 - lr: 1.0000e-07\n",
+      "Epoch 26/50\n",
+      "1875/1875 [==============================] - ETA: 0s - loss: 0.1253 - accuracy: 0.9654\n",
+      "Epoch 00026: ReduceLROnPlateau reducing learning rate to 1.0000000116860975e-08.\n",
+      "1875/1875 [==============================] - 1339s 714ms/step - loss: 0.1253 - accuracy: 0.9654 - val_loss: 1.2298 - val_accuracy: 0.7496 - lr: 1.0000e-07\n",
+      "Epoch 27/50\n",
+      "1875/1875 [==============================] - 1341s 715ms/step - loss: 0.1267 - accuracy: 0.9647 - val_loss: 1.2404 - val_accuracy: 0.7401 - lr: 1.0000e-08\n",
+      "Epoch 28/50\n",
+      "1875/1875 [==============================] - 1341s 715ms/step - loss: 0.1231 - accuracy: 0.9656 - val_loss: 1.1953 - val_accuracy: 0.7477 - lr: 1.0000e-08\n",
+      "Epoch 29/50\n",
+      "1875/1875 [==============================] - 1341s 715ms/step - loss: 0.1240 - accuracy: 0.9650 - val_loss: 1.2499 - val_accuracy: 0.7452 - lr: 1.0000e-08\n",
+      "Epoch 30/50\n",
+      "1875/1875 [==============================] - 1342s 716ms/step - loss: 0.1256 - accuracy: 0.9647 - val_loss: 1.2225 - val_accuracy: 0.7473 - lr: 1.0000e-08\n",
+      "Epoch 31/50\n",
+      "1875/1875 [==============================] - ETA: 0s - loss: 0.1267 - accuracy: 0.9643\n",
+      "Epoch 00031: ReduceLROnPlateau reducing learning rate to 9.999999939225292e-10.\n",
+      "1875/1875 [==============================] - 1341s 715ms/step - loss: 0.1267 - accuracy: 0.9643 - val_loss: 1.2438 - val_accuracy: 0.7493 - lr: 1.0000e-08\n"
      ]
     }
    ],
    "source": [
-    "from tensorflow.keras.callbacks import EarlyStopping, CSVLogger\n",
-    "es_callback = EarlyStopping(monitor='val_loss', patience=10)\n",
-    "csv_logger = CSVLogger(os.path.join('eval','4_eval_resnet_pretrained.log'))\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, CSVLogger, ReduceLROnPlateau\n",
+    "\n",
     "n_epochs=50\n",
     "\n",
-    "lr_callback = tf.keras.callbacks.ReduceLROnPlateau(\n",
+    "# Callbacks\n",
+    "es_callback = EarlyStopping(monitor='val_loss', patience=25)\n",
+    "csv_logger = CSVLogger(os.path.join('eval','4_eval_resnet_pretrained.log'))\n",
+    "lr_callback = ReduceLROnPlateau(\n",
     "    monitor='val_loss', factor=0.1, patience=5, verbose=1, mode='auto'\n",
     ")\n",
     "\n",
@@ -503,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -529,8 +552,8 @@
      "output_type": "stream",
      "text": [
       "Model was successfully loaded\n",
-      "782/782 [==============================] - 86s 111ms/step - loss: 1.0506 - accuracy: 0.7847\n",
-      "{'loss': 1.0506229400634766, 'accuracy': 0.7847310900688171}\n"
+      "521/521 [==============================] - 81s 156ms/step - loss: 1.0220 - accuracy: 0.7931\n",
+      "{'loss': 1.022027850151062, 'accuracy': 0.7930564284324646}\n"
      ]
     }
    ],
