--- a/Ch07/7.2.Transfer_Learning.ipynb
+++ b/Ch07/7.2.Transfer_Learning.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "<table align=\"left\">\n",
     "    <td>\n",
-    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch07/7.1.Image_Classification_Advance.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch07/7.2.Transfer_Learning.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
     "    </td>\n",
     "</table>"
    ]
