Latest language modelling code. working beam seach

--- a/Ch09/9.2_Language_modelling.ipynb
+++ b/Ch09/9.2_Language_modelling.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Chapter 9: Language modelling"
+   ]
   },
   {
    "cell_type": "code",
@@ -82,6 +82,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download the bAbI's childeren story dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -127,6 +134,13 @@
     "    tarf.extractall(os.path.join(\"data\",\"lm\"))  \n",
     "else:\n",
     "    print(\"The extracted data already exists\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read the data"
    ]
   },
   {
@@ -190,6 +204,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert strings to n-grams"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -250,6 +271,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get the size of the vocabulary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -265,6 +293,13 @@
    "source": [
     "n_vocab = (freq_df>=10).sum()\n",
     "print(\"Size of vocabulary: {}\".format(n_vocab))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## n-grams to IDs: Defining a Keras tokenizer"
    ]
   },
   {
@@ -287,6 +322,13 @@
     "\n",
     "test_ngram_stories = [ngrams(s,n) for s in test_stories]\n",
     "test_data_seq = tokenizer.texts_to_sequences(test_ngram_stories)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the TensorFlow tf.data pipeline"
    ]
   },
   {
@@ -319,8 +361,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## See some data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -328,51 +377,38 @@
      "output_type": "stream",
      "text": [
       "(<tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
-      "array([[ 8, 12,  3, 12,  2],\n",
-      "       [11,  2,  9,  2,  4],\n",
-      "       [ 4,  3, 11,  2,  9],\n",
-      "       [28,  3, 10,  4,  2],\n",
-      "       [12,  2, 10, 14, 16],\n",
-      "       [16, 16,  3, 11,  2]], dtype=int32)>, <tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
-      "array([[12,  3, 12,  2,  5],\n",
-      "       [ 2,  9,  2,  4,  7],\n",
-      "       [ 3, 11,  2,  9,  2],\n",
-      "       [ 3, 10,  4,  2,  9],\n",
-      "       [ 2, 10, 14, 16, 16],\n",
-      "       [16,  3, 11,  2,  9]], dtype=int32)>)\n",
+      "array([[ 16,  64, 255,   7, 161],\n",
+      "       [ 96,  21,  43,   3,   4],\n",
+      "       [ 55, 137,   2,  14, 296],\n",
+      "       [ 11,  68,  60,  17,  10],\n",
+      "       [211,   2, 122,  24,  62],\n",
+      "       [137,   2,  14, 296,  48]], dtype=int32)>, <tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
+      "array([[ 64, 255,   7, 161,  76],\n",
+      "       [ 21,  43,   3,   4,  11],\n",
+      "       [137,   2,  14, 296,  48],\n",
+      "       [ 68,  60,  17,  10,  16],\n",
+      "       [  2, 122,  24,  62,  14],\n",
+      "       [  2,  14, 296,  48, 100]], dtype=int32)>)\n",
       "(<tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
-      "array([[29, 29,  2,  7,  5],\n",
-      "       [ 2,  4,  7,  3,  2],\n",
-      "       [ 8,  3,  2, 21,  2],\n",
-      "       [ 2, 20,  7,  5,  8],\n",
-      "       [14, 16, 16,  3, 11],\n",
-      "       [23,  4,  3, 11,  2]], dtype=int32)>, <tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
-      "array([[29,  2,  7,  5, 11],\n",
-      "       [ 4,  7,  3,  2, 10],\n",
-      "       [ 3,  2, 21,  2, 26],\n",
-      "       [20,  7,  5,  8, 17],\n",
-      "       [16, 16,  3, 11,  2],\n",
-      "       [ 4,  3, 11,  2,  9]], dtype=int32)>)\n",
-      "(<tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
-      "array([[12,  2,  5,  8, 12],\n",
-      "       [11,  2,  9, 10,  2],\n",
-      "       [21,  2, 26, 26,  2],\n",
-      "       [ 7,  5,  8, 17,  3],\n",
-      "       [ 3,  8, 12,  3, 12],\n",
-      "       [17,  3,  2, 29, 29]], dtype=int32)>, <tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
-      "array([[ 2,  5,  8, 12,  2],\n",
-      "       [ 2,  9, 10,  2, 17],\n",
-      "       [ 2, 26, 26,  2, 36],\n",
-      "       [ 5,  8, 17,  3,  2],\n",
-      "       [ 8, 12,  3, 12,  2],\n",
-      "       [ 3,  2, 29, 29,  2]], dtype=int32)>)\n"
+      "array([[299, 124,  23, 186, 106],\n",
+      "       [ 25, 143,  21,  75, 103],\n",
+      "       [ 60,  91, 164, 116,  34],\n",
+      "       [ 76, 138,  67,  41,  96],\n",
+      "       [ 62,  14,  88,  52, 225],\n",
+      "       [161,  76, 138,  67,  41]], dtype=int32)>, <tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
+      "array([[124,  23, 186, 106,  57],\n",
+      "       [143,  21,  75, 103,  28],\n",
+      "       [ 91, 164, 116,  34,   2],\n",
+      "       [138,  67,  41,  96,  21],\n",
+      "       [ 14,  88,  52, 225,  23],\n",
+      "       [ 76, 138,  67,  41,  96]], dtype=int32)>)\n"
      ]
     }
    ],
    "source": [
     "ds = get_tf_pipeline(train_data_seq, 5, batch_size=6)\n",
     "\n",
-    "for a in ds.take(3):\n",
+    "for a in ds.take(2):\n",
     "\n",
     "    print(a)\n"
    ]
@@ -382,6 +418,44 @@
    "metadata": {},
    "source": [
     "https://arxiv.org/pdf/1708.02182.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "        \n",
+    "K.clear_session()\n",
+    "n_seq=100\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Embedding(input_dim=n_vocab+1, output_dim=512, input_shape=(None,)),\n",
+    "    # Defining an LSTM layer\n",
+    "    tf.keras.layers.GRU(1024, return_state=False, return_sequences=True),\n",
+    "    #tf.keras.layers.GRU(512, return_state=False, return_sequences=True),\n",
+    "    # Defining a Dense layer\n",
+    "    tf.keras.layers.Dense(512, activation='relu'),\n",
+    "    #tf.keras.layers.TimeDistributed(tf.keras.layers.Dropout(0.8)),\n",
+    "    #tf.keras.layers.Dense(512, activation='relu'),\n",
+    "    #tf.keras.layers.TimeDistributed(tf.keras.layers.Dropout(0.8)),\n",
+    "    tf.keras.layers.Dense(n_vocab, name='final_out'),\n",
+    "    tf.keras.layers.Activation(activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the Perplexity Metric"
    ]
   },
   {
@@ -430,6 +504,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test the Perpelxity calculations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(1.2082006, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = PerplexityMetric()\n",
+    "true = [[0, 1,2],[0, 1,2]]\n",
+    "pred = [[[0.9, 0.1, 0.0], [0.3, 0.7, 0.0], [0.0, 0.1, 0.9]],[[0.9, 0.1, 0.0], [0.3, 0.7, 0.0], [0.0, 0.1, 0.9]]]\n",
+    "p.update_state(true, pred)\n",
+    "print(p.result())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compiling the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -460,22 +569,6 @@
     }
    ],
    "source": [
-    "        \n",
-    "K.clear_session()\n",
-    "n_seq=100\n",
-    "model = tf.keras.models.Sequential([\n",
-    "    tf.keras.layers.Embedding(input_dim=n_vocab+1, output_dim=512, input_shape=(None,)),\n",
-    "    # Defining an LSTM layer\n",
-    "    tf.keras.layers.GRU(1024, return_state=False, return_sequences=True),\n",
-    "    #tf.keras.layers.GRU(512, return_state=False, return_sequences=True),\n",
-    "    # Defining a Dense layer\n",
-    "    tf.keras.layers.Dense(512, activation='relu'),\n",
-    "    #tf.keras.layers.TimeDistributed(tf.keras.layers.Dropout(0.8)),\n",
-    "    #tf.keras.layers.Dense(512, activation='relu'),\n",
-    "    #tf.keras.layers.TimeDistributed(tf.keras.layers.Dropout(0.8)),\n",
-    "    tf.keras.layers.Dense(n_vocab, name='final_out'),\n",
-    "    tf.keras.layers.Activation(activation='softmax')\n",
-    "])\n",
     "# Compile the model\n",
     "model.compile(\n",
     "    loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy', PerplexityMetric()]\n",
@@ -484,33 +577,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(1.2082006, shape=(), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "p = PerplexityMetric()\n",
-    "true = [[0, 1,2],[0, 1,2]]\n",
-    "pred = [[[0.9, 0.1, 0.0], [0.3, 0.7, 0.0], [0.0, 0.1, 0.9]],[[0.9, 0.1, 0.0], [0.3, 0.7, 0.0], [0.0, 0.1, 0.9]]]\n",
-    "p.update_state(true, pred)\n",
-    "print(p.result())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GRU got to around 35% accuracy and 39 validation perplexity\n",
-    "\n",
-    "5873 steps 128 batch size 50 stories"
+    "## Training the model"
    ]
   },
   {
@@ -608,6 +678,13 @@
     "t2 = time.time()\n",
     "\n",
     "print(\"It took {} seconds to complete the training\".format(t2-t1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the model"
    ]
   },
   {
@@ -788,19 +865,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "https://gist.github.com/Gregorgeous/dbad1ec22efc250c76354d949a13cec3"
+    "## Beam search decoding"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Beam search decoding"
+    "### Defining the beam search logic"
    ]
   },
   {
@@ -850,6 +925,13 @@
     "    results = sorted(results, key=lambda x: x[2], reverse=True)\n",
     "\n",
     "    return results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating the actual text"
    ]
   },
   {
@@ -949,7 +1031,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "## Legacy beam seach - Needs to be removed\n",
     "def beam_search(model, input_, state, beam_depth=5, beam_width=3):\n",
     "    \n",
     "    def recursive_fn(input_, state, sequence, log_prob, i):\n",
