Fixes in language modelling

--- a/Ch09/9.2_Language_modelling.ipynb
+++ b/Ch09/9.2_Language_modelling.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -221,6 +221,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Quick drive to vocabulary-ville"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ",      348650\n",
+      "the    242890\n",
+      ".\\n    192549\n",
+      "and    179205\n",
+      "to     120821\n",
+      "a      101990\n",
+      "of      96748\n",
+      "i       79780\n",
+      "he      78129\n",
+      "was     66593\n",
+      "dtype: int64\n",
+      "\n",
+      "Vocabulary size (>=10 frequent): 14473\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "# Create a large list which contains all the words in all the reviews\n",
+    "data_list = [w for doc in stories for w in doc.split(' ')]\n",
+    "\n",
+    "# Create a Counter object from that list\n",
+    "# Counter returns a dictionary, where key is a word and the value is the frequency\n",
+    "cnt = Counter(data_list)\n",
+    "\n",
+    "# Convert the result to a pd.Series \n",
+    "freq_df = pd.Series(list(cnt.values()), index=list(cnt.keys())).sort_values(ascending=False)\n",
+    "\n",
+    "# Print most common words\n",
+    "print(freq_df.head(n=10))\n",
+    "\n",
+    "# Count of words >= n frequent\n",
+    "n=10\n",
+    "print(\"\\nVocabulary size (>={} frequent): {}\".format(n, (freq_df>=n).sum()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Convert strings to n-grams\n",
     "\n",
     "For our language modelling task, we're going to split strings into bigrams. That is, given the string\n",
@@ -234,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -245,29 +297,31 @@
       "\t1-grams: ['I', ' ', 'l', 'i', 'k', 'e', ' ', 'c', 'h', 'o', 'c', 'o', 'l', 'a', 't', 'e', 's']\n",
       "\t2-grams: ['I ', 'li', 'ke', ' c', 'ho', 'co', 'la', 'te', 's']\n",
       "\t3-grams: ['I l', 'ike', ' ch', 'oco', 'lat', 'es']\n",
-      "e     455292\n",
-      " t    344971\n",
-      "he    310539\n",
-      "d     308390\n",
-      "th    284425\n",
-      " a    268496\n",
-      "t     257788\n",
-      "s     227961\n",
-      " h    192544\n",
-      " s    182830\n",
+      "\n",
+      "Sample of most-common bigrams\n",
+      "e     455237\n",
+      " t    345305\n",
+      "he    310813\n",
+      "d     308382\n",
+      "th    284134\n",
+      " a    268079\n",
+      "t     257842\n",
+      "s     228193\n",
+      " h    192680\n",
+      " s    183000\n",
       "dtype: int64\n",
       "\n",
-      "Median: 136.5\n",
+      "Median: 128.5\n",
       "\n",
-      "count      1074.000000\n",
-      "mean      12106.919926\n",
-      "std       36358.817692\n",
+      "count      1080.000000\n",
+      "mean      12039.712963\n",
+      "std       36270.245525\n",
       "min           1.000000\n",
       "25%           5.000000\n",
-      "50%         136.500000\n",
-      "75%        6406.750000\n",
-      "90%       34184.600000\n",
-      "max      455292.000000\n",
+      "50%         128.500000\n",
+      "75%        6344.000000\n",
+      "90%       34142.700000\n",
+      "max      455237.000000\n",
       "dtype: float64\n"
      ]
     }
@@ -294,6 +348,7 @@
     "\n",
     "# Create a pandas series with the counter results\n",
     "freq_df = pd.Series(list(cnt.values()), index=list(cnt.keys())).sort_values(ascending=False)\n",
+    "print(\"\\nSample of most-common bigrams\")\n",
     "print(freq_df.head(n=10))\n",
     "print(\"\\nMedian: {}\\n\".format(freq_df.median()))\n",
     "# Get summary statistics\n",
@@ -311,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of vocabulary: 735\n"
+      "Size of vocabulary: 743\n"
      ]
     }
    ],
@@ -338,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,18 +423,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining the TensorFlow `tf.data` pipeline\n",
-    "\n",
-    "Here we will define a `tf.data` pipeline to generate data for the model. In language modelling, data is generated as follows. Say you want to provide a `n` elements long sequence as the input to the model in order to generate text. Then you take a `n+1` long sequence `text` and split it into two parts; `text[:-1]` and `text[1:]`."
+    "## Let's look at some word ID sequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original: the yellow fairy book the cat and the mouse in par\n",
+      "n-grams: ['th', 'e ', 'ye', 'll', 'ow', ' f', 'ai', 'ry', ' b', 'oo', 'k ', 'th', 'e ', 'ca', 't ', 'an', 'd ', 'th', 'e ', 'mo', 'us', 'e ', 'in', ' p', 'ar']\n",
+      "Word ID sequence: [6, 2, 215, 54, 84, 35, 95, 146, 26, 97, 123, 6, 2, 128, 8, 15, 5, 6, 2, 147, 114, 2, 17, 65, 52]\n",
+      "\n",
+      "\n",
+      "Original: chapter i. down the rabbit-hole alice was beginnin\n",
+      "n-grams: ['ch', 'ap', 'te', 'r ', 'i.', ' d', 'ow', 'n ', 'th', 'e ', 'ra', 'bb', 'it', '-h', 'ol', 'e ', 'al', 'ic', 'e ', 'wa', 's ', 'be', 'gi', 'nn', 'in']\n",
+      "Word ID sequence: [93, 207, 57, 19, 545, 47, 84, 18, 6, 2, 126, 344, 38, 400, 136, 2, 70, 142, 2, 66, 9, 71, 218, 251, 17]\n",
+      "\n",
+      "\n",
+      "Original: a patent medicine testimonial `` you might as well\n",
+      "n-grams: ['a ', 'pa', 'te', 'nt', ' m', 'ed', 'ic', 'in', 'e ', 'te', 'st', 'im', 'on', 'ia', 'l ', '``', ' y', 'ou', ' m', 'ig', 'ht', ' a', 's ', 'we', 'll']\n",
+      "Word ID sequence: [60, 179, 57, 78, 33, 31, 142, 17, 2, 57, 50, 125, 43, 266, 56, 122, 92, 29, 33, 152, 149, 7, 9, 103, 54]\n",
+      "\n",
+      "\n",
+      "Original: mowgli 's brothers now rann the kite brings home t\n",
+      "n-grams: ['mo', 'wg', 'li', \" '\", 's ', 'br', 'ot', 'he', 'rs', ' n', 'ow', ' r', 'an', 'n ', 'th', 'e ', 'ki', 'te', ' b', 'ri', 'ng', 's ', 'ho', 'me', ' t']\n",
+      "Word ID sequence: [147, 513, 74, 46, 9, 203, 99, 4, 134, 58, 84, 79, 15, 18, 6, 2, 190, 57, 26, 89, 37, 9, 73, 63, 3]\n",
+      "\n",
+      "\n",
+      "Original: i jimmy skunk is puzzled old mother west wind had \n",
+      "n-grams: ['i ', 'ji', 'mm', 'y ', 'sk', 'un', 'k ', 'is', ' p', 'uz', 'zl', 'ed', ' o', 'ld', ' m', 'ot', 'he', 'r ', 'we', 'st', ' w', 'in', 'd ', 'ha', 'd ']\n",
+      "Word ID sequence: [87, 388, 308, 21, 274, 117, 123, 48, 65, 474, 494, 31, 24, 98, 33, 99, 4, 19, 103, 50, 13, 17, 5, 30, 5]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s, ngrams, seq in zip(test_stories[:5], test_ngram_stories[:5], test_data_seq[:5]):\n",
+    "    print(\"Original: {}\".format(s[:50]))\n",
+    "    print(\"n-grams: {}\".format(ngrams[:25]))\n",
+    "    print(\"Word ID sequence: {}\".format(seq[:25]))\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the TensorFlow `tf.data` pipeline\n",
+    "\n",
+    "Here we will define a `tf.data` pipeline to generate data for the model. In language modelling, data is generated as follows. Say you want to provide a `n` elements long sequence as the input to the model in order to generate text. Then you take a `n+1` long sequence `text` and split it into two parts; `text[:-1]` and `text[1:]`. At any step of the implementation, you can check the specification of the dataset with `print(tf.data.DatasetSpec.from_value(ds))`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_tf_pipeline(data_seq, n_seq, batch_size=64, stride=1, shuffle=True):\n",
+    "def get_tf_pipeline(data_seq, n_seq, batch_size=64, shift=1, shuffle=True):\n",
     "    \"\"\" Define a tf.data pipeline that takes a set of sequences of text and \n",
     "    convert them to fixed length sequences for the model \"\"\"\n",
     "    \n",
@@ -392,11 +499,20 @@
     "    \n",
     "    # This function will create windows from data, given a window size and a stride\n",
     "    # Each window is a single entity\n",
-    "    text_ds = text_ds.flat_map(lambda x: tf.data.Dataset.from_tensor_slices(x).window(n_seq+1,shift=stride))\n",
+    "    #text_ds = text_ds.flat_map(lambda x: tf.data.Dataset.from_tensor_slices(x).window(n_seq+1,shift=stride)) \n",
     "    \n",
     "    # windows function create neted dataset within text ds\n",
     "    # This is a special trick we use to unwrap those nested structures\n",
-    "    text_ds = text_ds.flat_map(lambda window: window.batch(n_seq+1, drop_remainder=True))    \n",
+    "    #text_ds = text_ds.flat_map(lambda window: window.batch(n_seq+1, drop_remainder=True))    \n",
+    "    text_ds = text_ds.flat_map(\n",
+    "        lambda x: tf.data.Dataset.from_tensor_slices(\n",
+    "            x\n",
+    "        ).window(\n",
+    "            n_seq+1, shift=shift\n",
+    "        ).flat_map(\n",
+    "            lambda window: window.batch(n_seq+1, drop_remainder=True)\n",
+    "        )\n",
+    "    ) \n",
     "    \n",
     "    # Shuffle the data (shuffle the order of n_seq+1 long sequences)\n",
     "    if shuffle:\n",
@@ -422,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -430,31 +546,31 @@
      "output_type": "stream",
      "text": [
       "(<tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
-      "array([[160,  13,  69, 396,  17],\n",
-      "       [  2,  72,  77,  85,  24],\n",
+      "array([[161,  12,  69, 396,  17],\n",
+      "       [  2,  72,  77,  84,  24],\n",
       "       [ 87,   6,   2,  72,  77],\n",
-      "       [276, 483,  57,   5,  15],\n",
+      "       [276, 484,  57,   5,  15],\n",
       "       [ 75, 150,   3,   4,  11],\n",
-      "       [ 11,  73, 213,  35, 142]], dtype=int32)>, <tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
-      "array([[ 13,  69, 396,  17,  44],\n",
-      "       [ 72,  77,  85,  24,  51],\n",
-      "       [  6,   2,  72,  77,  85],\n",
-      "       [483,  57,   5,  15,  67],\n",
+      "       [ 11,  73, 211,  35, 141]])>, <tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
+      "array([[ 12,  69, 396,  17,  44],\n",
+      "       [ 72,  77,  84,  24,  51],\n",
+      "       [  6,   2,  72,  77,  84],\n",
+      "       [484,  57,   5,  15,  67],\n",
       "       [150,   3,   4,  11,  73],\n",
-      "       [ 73, 213,  35, 142,  98]], dtype=int32)>)\n",
+      "       [ 73, 211,  35, 141,  98]])>)\n",
       "(<tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
       "array([[ 48,  69,  43,   2,  14],\n",
-      "       [ 85,  24,  51,  93,  15],\n",
+      "       [ 84,  24,  51,  93,  15],\n",
       "       [104,  28,  23,  72,   2],\n",
       "       [ 22,  31,   7,  22,  11],\n",
-      "       [  4,  11,  73, 213,  35],\n",
-      "       [ 19,  87,   6,   2,  72]], dtype=int32)>, <tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
+      "       [  4,  11,  73, 211,  35],\n",
+      "       [ 19,  87,   6,   2,  72]])>, <tf.Tensor: shape=(6, 5), dtype=int32, numpy=\n",
       "array([[ 69,  43,   2,  14, 124],\n",
-      "       [ 24,  51,  93,  15, 152],\n",
+      "       [ 24,  51,  93,  15, 151],\n",
       "       [ 28,  23,  72,   2,  15],\n",
-      "       [ 31,   7,  22,  11, 278],\n",
-      "       [ 11,  73, 213,  35, 142],\n",
-      "       [ 87,   6,   2,  72,  77]], dtype=int32)>)\n"
+      "       [ 31,   7,  22,  11, 280],\n",
+      "       [ 11,  73, 211,  35, 141],\n",
+      "       [ 87,   6,   2,  72,  77]])>)\n"
      ]
     }
    ],
@@ -543,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,8 +679,8 @@
     "      \n",
     "      # Calculating the perplexity steps: \n",
     "      step1 = K.mean(loss_, axis=-1)\n",
-    "      step2 = K.exp(step1)\n",
-    "      perplexity = K.mean(step2)\n",
+    "      perplexity = K.exp(step1)\n",
+    "      #perplexity = K.mean(step2)\n",
     "    \n",
     "      return perplexity \n",
     "\n",
@@ -583,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
